Added Student Resources section with API testing docs, Keploy videos, and OSS guide
Signed-off-by: Ankita-624 <ankitagouda624@gmail.com>

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <!-- <li><a class="smoothscroll"  href="#about" title="about">About</a></li> -->
                     <li><a class="smoothscroll"  href="#about" title="services">About</a></li>
                     <li><a class="smoothscroll"  href="#join" title="works">Join</a></li>
+                    <li><a class="smoothscroll" href="#resources" title="Resources">Resources</a></li>
+
+
                     <!-- <li><a class="smoothscroll"  href="#clients" title="clients">Clients</a></li> -->
                     <li><a class="smoothscroll"  href="#testimonials" title="contact">Testimonials</a></li>
                 </ul>
@@ -207,6 +210,60 @@
         </div> <!-- end services-list -->
 
     </section> <!-- end s-services -->
+
+  <!-- resources section
+================================================== -->
+<section id="resources" class="s-services">
+  <div class="row section-header has-bottom-sep" data-aos="fade-up">
+    <div class="col-full">
+      <h1 class="display-2">&#128216; Student Resources</h1>
+      <p>A hand-picked guide to help students get started with API testing, learning, and contributing to open source with Keploy.</p>
+    </div>
+  </div>
+
+  <div class="row services-list block-1-3 block-tab-full">
+
+    <div class="col-block service-item" data-aos="fade-up">
+      <div class="service-text">
+        <h3 class="h2">&#129504; API Testing Guides</h3>
+        <ul>
+          <li><a href="https://keploy.io/docs/running-keploy/api-test-generator/" target="_blank">Keploy API Test Generator Guide</a></li>
+          <li><a href="https://keploy.io/docs/" target="_blank">API Testing - Keploy Docs</a></li>
+          <li><a href="https://keploy.io/blog/community/everything-you-need-to-know-about-api-testing" target="_blank">Everything You Need to Know About API Testing - Keploy Blog</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-block service-item" data-aos="fade-up">
+      <div class="service-text">
+        <h3 class="h2">&#127909; Video Demonstrations</h3>
+        <ul>
+          <li><a href="https://www.youtube.com/watch?v=P_zEi1MMs4w" target="_blank">API Testing Without Writing Test Cases and Mocks - Neha Gupta & Shubham Jain</a></li>
+          <li><a href="https://www.youtube.com/watch?v=Ssm4TnTkbLs" target="_blank">Keploy Demo (JAVA) - Generate Test Cases, Mocks, and Stubs</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-block service-item" data-aos="fade-up">
+      <div class="service-text">
+        <h3 class="h2">&#128640; Open Source Basics</h3>
+        <p>Follow these simplified steps to become a confident open-source contributor:</p>
+        <ol>
+          <li><strong>Discover:</strong> Explore repositories with beginner-friendly issues (try <a href="https://github.com/keploy" target="_blank">Keploy</a>).</li>
+          <li><strong>Fork & Clone:</strong> Create your own copy of the repo and bring it to your local system.</li>
+          <li><strong>Branch:</strong> Use a meaningful branch name like <code>fix-doc-links</code> or <code>add-resource-section</code>.</li>
+          <li><strong>Contribute:</strong> Write, fix, or improve code/docs — every small contribution counts!</li>
+          <li><strong>PR & Engage:</strong> Push your changes and create a clear Pull Request explaining what you improved.</li>
+        </ol>
+        <p>&#128221;
+ Pro tip: Always check the repo's <code>CONTRIBUTING.md</code> for specific guidelines before submitting a PR.</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- end resources section -->
+
 
 
     <!-- clients
