--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
 
-    <!--- basic page needs
+    <!--- Basic page needs
     ================================================== -->
     <meta charset="utf-8">
     <title>Keploy - Open source e2e testing toolkit for developers</title>
@@ -471,7 +471,7 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
-<!-- Start:- Button for Scroll-To-Top -->
+<!-- Start => Button for Scroll-To-Top -->
 
   <!-- Scroll to top(STT) button -->
   <button onclick="topFunction()" id="scrollTopBtn" title="Go to top">⬆</button>
@@ -518,7 +518,7 @@
       document.documentElement.scrollTop = 0;
     }
   </script>
-<!-- End:- Button for Scroll-To-Top -->
+<!-- End => Button for Scroll-To-Top -->
 
 </body>
 
