--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Keploy Fellowship Program">
     <meta name="author" content="keploy.io">
 
-    <!-- mobile specific metas
+    <!-- Mobile specific metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
