--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
-    <!-- favicons
+    <!-- Favicons
     ================================================== -->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" href="favicon.png" type="image/x-icon">
@@ -473,7 +473,7 @@
 
 <!-- Start => Button for Scroll-To-Top -->
 
-  <!-- Scroll to top(STT) button -->
+  <!-- Scroll to top button -->
   <button onclick="topFunction()" id="scrollTopBtn" title="Go to top">⬆</button>
 
   <!-- Styles for STT button -->
